[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chunker"
version = "0.1.0"
description = "Chunk extracted PDF pages (JSONL) into embedding-ready chunks (JSONL)."
requires-python = ">=3.10"
dependencies = [
    "tokenizers>=0.23.1",
    "pydantic>=2.13.4",
    "nltk>=3.9.4",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "jsonschema"]

[project.scripts]
chunker = "cli:main"

[tool.setuptools]
py-modules = ["chunker", "cli", "tool"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B905", "RUF007"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["nltk.*", "tokenizers.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests.py"]
addopts = "-q"
